--- a/packages/infra/package.json
+++ b/packages/infra/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@types/node": "^20.11.0",
     "aws-cdk": "^2.120.0",
+    "esbuild": "^0.27.2",
     "tsx": "^4.7.0",
     "typescript": "^5.3.0"
   }
